# ai-contextual-memo

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/application/memo/: memo_usecase.py
app/di/: container.py  memo.py
app/domain/: ai_client_interface.py  models.py  repository_interface.py
app/domain/memo/entities/: memo.py
app/domain/memo/repositories/: memo_repository.py
app/domain/memo/services/: ai_client.py  embedding_client.py  similarity.py
app/infrastructure/: claude_client.py  database.py  in_memory_memo_repository.py  memo_table.py  postgres_memo_repository.py
app/infrastructure/memo/db/: database.py
app/presentation/: main.py
app/presentation/memo/api/: memo_api.py
app/presentation/memo/schemas/: memo_schemas.py
app/usecase/: memo_usecase.py
docs/specs/: vector-search.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src/app/: app.tsx  index.ts  providers.tsx
frontend/src/entities/graph/: index.ts
frontend/src/entities/memo/: index.ts
frontend/src/features/graph/: index.ts
frontend/src/pages/graph/: graph-page.tsx  index.ts
frontend/src/pages/memo/: index.ts  memo-page.tsx
tests/: conftest.py
tests/integration/: conftest.py  test_api.py  test_memo_repository.py
tests/unit/domain/: test_models.py
tests/unit/usecase/: test_graph.py  test_graph_3d.py  test_memo_usecase.py  test_vector_search.py
(+29 files in other folders)
